--- a/angular4-project/src/app/signup-form/signup-form.component.html
+++ b/angular4-project/src/app/signup-form/signup-form.component.html
@@ -7,7 +7,8 @@
             type="text"
             class="form-control">
         <div class="alert alert-danger" *ngIf="username.touched && username.invalid">
-          Username is required
+          <div *ngIf="username.errors.required">Username is required.</div>
+          <div *ngIf="username.errors.minlength">Username should be minimum {{ username.errors.minlength.requiredLength }} characters.</div>
         </div>
     </div>
     <div class="form-group">
