--- a/angular4-project/src/app/signup-form/signup-form.component.html
+++ b/angular4-project/src/app/signup-form/signup-form.component.html
@@ -1,27 +1,21 @@
 <form [formGroup]="form" (ngSubmit)="login()">
-    <div *ngIf="form.errors" class="alert alert-danger">
-      The username or password is invalid.
+  <div *ngIf="form.errors" class="alert alert-danger">
+    The username or password is invalid.
+  </div>
+  <div formGroupName="account">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input formControlName="username" id="username" type="text" class="form-control">
+      <div *ngIf="username.pending">Checking ...</div>
+      <div class="alert alert-danger" *ngIf="username.touched && username.invalid">
+        <div *ngIf="username.errors.required">Username is required.</div>
+        <div *ngIf="username.errors.shouldBeUnique">Username is already taken.</div>
+      </div>
     </div>
     <div class="form-group">
-        <label for="username">Username</label>
-        <input
-            formControlName="username"
-            id="username"
-            type="text"
-            class="form-control">
-            <div *ngIf="username.pending">Checking ...</div>
-        <div class="alert alert-danger" *ngIf="username.touched && username.invalid">
-          <div *ngIf="username.errors.required">Username is required.</div>
-          <div *ngIf="username.errors.shouldBeUnique">Username is already taken.</div>
-        </div>
+      <label for="password">Password</label>
+      <input formControlName="password" id="password" type="text" class="form-control">
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input
-            formControlName="password"
-            id="password"
-            type="text"
-            class="form-control">
-    </div>
-    <button class="btn btn-primary" type="submit">Sign Up</button>
+  </div>
+  <button class="btn btn-primary" type="submit">Sign Up</button>
 </form>
